# analyzer-tree

./: .gitignore  README.md  package.json
core/: Cargo.toml
core/src/: lib.rs  tree.rs
extension/: package.json  tsconfig.json  webpack.config.js
extension/src/: agentDetector.ts  contextExporter.ts  contextTreeWebview.ts  extension.ts  gitWatcher.ts  treeProvider.ts  types.ts
