[package]
name = "analyzer-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "1.0.1"
indextree = "4.6.0"      # Arena-based tree allocator (No borrow checker pain!)
tiktoken-rs = { version = "0.5.9", optional = true }
